public class AnimalIncubator extends Labratory{
}
