public class Bear extends WildAnimal{
}
