public class Cage {
    int Level;
    void TimeToDo(){};
    void WorkToDo(){};
    int time;
    int currrenttime;
    int power;

}
//پاور نشان دهنده تعداد گلیگی که روی قفس شده تا قوی شود و بتوان حیوان وحشی را ثابت فیکس کند
//این کلاس کلاس قفس را برعهده دارد
//و تمامی کار های ان از جمله لول و
//قدرت نگه داری و ...قفس را هندل می کند
