public class CakeBakery extends Labratory{
}
