public class Cat extends DefenderAnimal{
}
