public class CookieBakery extends Labratory{
}
