public class Cow extends DomesticAnimal{
}
