public class DefenderAnimal extends Animal{
    @Override
    void WorkToDo() {
        super.WorkToDo();
    }
}
//در این کلاس حیوانات دفاع کننده را جای می دهیم
//و با توجه به هر فیلد و متود لازم آنها را override می کنیم
// و فعلا 2 کلاس گربه و سگ از این کلاس ارث بری می کنند و جرو این دسته خواهد بود
