public class Dog extends DefenderAnimal{
}
