public class DomesticAnimal extends Animal{
    void Eating(){};
    void NeedWater(){};
    void FindGrass(){};
}
// این کلاس کلاس حیوانات اهلی بوده و این حیوانات از این کلاس ارث بری می کنند.
// و به همانند کلاس قبلی حیوانات زیر کلاس این کلاس از فیلد ها و متود های این کلاس ارث بری می کند.
//این کلاس شامل گاو و مرغ و گوسفند و شترمرغ و بوفالو و.. می باشد.