public class EggPowderPlant extends Labratory{
}
