public class Farm {
    void PutGrass(){};
}
