public class Grass {
    int X_position;
    int Y_position;
    int MaxPower;
    void Power(){};
}
