public class Helicopter extends TransformVehicle{
    @Override
    void TypeOfWork() {
        super.TypeOfWork();
    }

    String s;
    void TimeToDo(String s) {
        super.TimeToDo();
        this.s=s;
    }

    @Override
    void Voice() {
        super.Voice();
    }
}
