public class Hen extends DomesticAnimal{
    @Override
    void WorkToDo() {
        super.WorkToDo();
    }
}
