public class Lion extends WildAnimal {
    @Override
    void WorkToDo() {
        super.WorkToDo();
    }
}
