public class Motor extends TransformVehicle{
    @Override
    void TypeOfWork() {
        super.TypeOfWork();
    }

    @Override
    void TimeToDo() {
        super.TimeToDo();
    }

    @Override
    void Voice() {
        super.Voice();
    }
}
