public class Ostrich extends DomesticAnimal{
}
