public class Product {
    int Price;
    int SizeInWareHouse;
    int Time;
    int CurrentTime;
    void ToLive(){};
}
//در این کلاس تمامی محصولاتاعم از پودر ها کیک ها کلوچه ها و
//تمامی محصولاتی که حیوانات تولید  می کنند زیر کلاس این کلاس اند.
//تا بتوان  انها را سازمان دهی کرد و همه اناها را
//به یک چشم نگاه کرد.
