public class Sheep extends DomesticAnimal{
}
