import com.sun.xml.internal.bind.v2.TODO;

public class Shop {
    int X_position;
    int Y_position;
    int HenCounter;
    int OstrichCounter;
    //TODO
}
//این کلاس در واقع پیاده سازی شده قسمت بالا راست صفحه بازی بوده
//و تمامی اتفاق ها را ثبت و ضبط می کند
//یعنی بر اساس قیمت برای خرید سکه از بانک کم کرده
//و به تعداد حیوانات می افزاید