public class Spinnery extends Labratory{
}
