public class TransformVehicle {
    int Capacity;
    int X_Positin;
    int Y_Position;
    void TypeOfWork(){};
    void TimeToDo(){};
    void Voice(){};
    int Time;
    int CurrentTime;
}
//این کلاس مربوز به نقل و انتقالات محصولات و حیوانات می باشد
//این مجموعه محصولات را به شهر برده و انها را فروخته و
//سود آنرا به مزرعه می آورد.
//هر وسیله نقلیه یک ظرفیت و یک سری تایم برای انتقال محصولات دارند
//و هر کدام وسایل خاصی را می توانند بفروشند.
//زیرکلاس های موتور و الی کوپتر از این کلاس ارث می برند و توایع
//مخصوص به خودشان را پیاده سازی می کنند