public class WeavingFactory extends Labratory{
}
