public class WildAnimal extends Animal {
    void RandomX_Y(){};
    void Attack(){};
    void BreakingCage(){};
}
// این کلاس مخصوس حیوانات وحشی می باشد
//و کلاس هایی مانند شیر و خرس از این کلاس ارث بری می کند
// و متود های ان را برای خودش بیاده سازی می کند.